# pycontinuum

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
src/pycontinuum/: __init__.py  combinators.py  core.py  effect.py  handlers.py  observability.py  resilience.py  security.py  serialization.py  testing.py
tests/: conftest.py  test_combinators.py  test_core.py  test_effect.py  test_handlers.py  test_resilience.py
