[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycontinuum"
version = "0.1.0"
description = "Multi-shot delimited continuations with static effect typing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "anyio>=4",
    "typing_extensions>=4.12; python_version < '3.13'",
]
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "hypothesis>=6",
    "mypy>=1.13",
    "ruff>=0.9",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.27",
]
cloud = ["grpcio>=1.70", "protobuf>=5"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycontinuum"]

[tool.mypy]
strict = true
# plugins = "pycontinuum._mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py312"
